--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -13,8 +13,8 @@
     height: 100%;
     z-index: -1;
     background: linear-gradient(90deg,
-            rgba(244, 202, 149, 0.6),
-            rgba(151, 77, 38, 0.6)
+            #8ed2df00,
+            #519fa58c
     ), url(../images/bg-header.jpg) right/cover no-repeat;
   }
 
