--- a/source/styles/sections/how.scss
+++ b/source/styles/sections/how.scss
@@ -1,8 +1,8 @@
 .how {
   position: relative;
   padding: 86px 0 94px;
-  background: #5a8a8a;
-  color: #fdeacf;
+  background: #94c8d6;
+  color: #012e33;
   text-align: center;
 
 
@@ -52,7 +52,7 @@
         width: 5px;
         height: 5px;
         border-radius: 50%;
-        background: #fdeacf;
+        background: #012e33;
       }
     }
 
