--- a/source/templates/sections/coach.pug
+++ b/source/templates/sections/coach.pug
@@ -3,7 +3,7 @@ section#coach.coach
 
         .coach__list
             .title
-                h2.title__header.title--with-bottom-line Кто ведёт программу?
+                h2.title__header.title--with-bottom-line-coach Кто ведёт программу?
             .coach__item
                 h6.coach__header.
                     Привет! Я Алена Вишневская, эксперт по медитациям, автор онлайн-программ обучения
