--- a/source/templates/sections/faq.pug
+++ b/source/templates/sections/faq.pug
@@ -90,5 +90,5 @@ section.faq__section#faq
                     input.form__input(type="email" placeholder="Your email" autocomplete='email' data-valid='required' data-email)
                     textarea.form__input(rows="10" cols="45" name="text" placeholder="Your message")
 
-                button(type="submit").button.button--red.button--text-uppercase Submit now
+                button(type="submit").button.button--form.button--text-uppercase Submit now
 
