--- a/source/templates/sections/price.pug
+++ b/source/templates/sections/price.pug
@@ -16,7 +16,7 @@ section#price.price
                     hr
                     | Отчеты и обратная связь по практике
 
-                h3.price__header 63 грн/день
+                h3.price__header.total--good 63 грн/день
                 .price__description 500 грн весь курс
                     hr
                     | 700 грн с 20.06
@@ -24,6 +24,7 @@ section#price.price
                 a.button.button--blue.button--text-uppercase(href="#") Записаться
 
             li.price__item
+                h2.recommend recommend
                 h3.price__header Пакет
                     br
                     | BEST
