--- a/source/styles/sections/coach.scss
+++ b/source/styles/sections/coach.scss
@@ -1,8 +1,8 @@
 .coach {
   padding: 99px 0 105px 0;
   text-align: center;
-  background: #cad8c5;
-  color: #424242;
+  background: #012e33;
+  color: #94c8d6;
 
   @media (max-width: 980px) {
     padding: 30px 0;
@@ -27,12 +27,6 @@
 
   &__item {
     padding: 26px;
-    color: #5c5c5c;
-
-    &_time {
-      background: #5a8a8a;
-      color: #fff;
-    }
 
     @media (max-width: 1000px) {
       padding-top: 0;
