--- a/source/styles/sections/experience.scss
+++ b/source/styles/sections/experience.scss
@@ -1,7 +1,7 @@
 .experience {
   padding: 99px 0 105px 0;
   text-align: center;
-  color: #424242;
+  color: #17191b;
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
@@ -40,14 +40,12 @@
     margin: 0 0 9px 0;
     font-size: 1.375rem;
     font-family: $ff-main-bold;
-    color: #424242;
   }
 
   &__description {
     margin-top: 0;
     font-size: 0.875rem;
     line-height: 1.5;
-    color: #5c5c5c;
 
     @media (max-width: 980px) {
       padding: 0 20px
