--- a/source/styles/sections/footer.scss
+++ b/source/styles/sections/footer.scss
@@ -3,17 +3,17 @@
   &__top {
     padding: 88px 0 83px;
     text-align: center;
-    background: #2a2a2a;
+    background: #17191b;
   }
 
   &__bottom {
     padding: 26px;
     text-align: center;
-    background: #515151;
+    background: #323e53;
   }
 
   &__title {
-    color: #fff;
+    color: #94c8d6;
     margin-bottom: 37px;
     font-size: 1.8125rem;
     font-family: $ff-main-bold;
@@ -22,11 +22,11 @@
   &__social {
     margin-left: 20px;
     padding: 15px;
-    border: 1px solid#fff;
+    border: 1px solid #94c8d6;
     border-radius: 3px;
 
     &:hover {
-      border: 1px solid #de2b24;
+      border: 1px solid #9f2112;
     }
 
     &:first-child {
@@ -36,10 +36,10 @@
 
   &__links {
     margin-bottom: 48px;
-    color: #fff;
+    color: #94c8d6;
 
     .fa {
-      color: #fff;
+      color: #94c8d6;
     }
   }
 
