--- a/source/styles/sections/guarantees.scss
+++ b/source/styles/sections/guarantees.scss
@@ -2,23 +2,7 @@
   position: relative;
   padding: 99px 0 105px 0;
   text-align: left;
-  color: #424242;
-
-  &:before {
-    content: ' ';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background: linear-gradient(90deg,
-            rgba(202, 216, 197, 0.6),
-            rgba(90, 138, 138, 0.6)
-    ), url(../images/bg_guarantees.jpg) bottom/cover no-repeat;
-  }
+  color: #17191b;
 
   @media (max-width: 980px) {
     padding: 30px 0;
