--- a/source/styles/sections/info.scss
+++ b/source/styles/sections/info.scss
@@ -2,23 +2,7 @@
   position: relative;
   padding: 99px 0 105px 0;
   text-align: center;
-  color: #424242;
-
-  &:before {
-    content: ' ';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background: linear-gradient(90deg,
-            rgba(202, 216, 197, 0.6),
-            rgba(90, 138, 138, 0.6)
-    ), url(../images/bg_info.jpg) left/cover no-repeat;
-  }
+  color: #17191b;
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
@@ -44,7 +28,7 @@
     border-radius: 10px;
     cursor: pointer;
     background: #fff;
-    color: #5c5c5c;
+    color: #17191b;
 
     @media (max-width: 980px) {
       width: 80%;
@@ -58,7 +42,7 @@
     }
 
     &_time {
-      background: #5a8a8a;
+      background: #35838d;
       color: #fff;
     }
   }
