--- a/source/styles/sections/testim.scss
+++ b/source/styles/sections/testim.scss
@@ -1,8 +1,8 @@
 .testimonials {
   padding: 99px 0 50px;
   text-align: center;
-  color: #cecece;
-  background: #424242;
+  color: #f2efdf;
+  background: #17191b;
 
   .name__testim {
     display: flex;
@@ -61,7 +61,7 @@
   blockquote {
     margin: 0;
     padding: 30px;
-    background-color: #974d26;
+    background-color: #012e33;
     color: #fdeacf;
     box-shadow: 0 5px 2px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -74,8 +74,8 @@
       position: absolute;
       top: 100%;
       border: solid transparent;
-      border-top-color: #974d26;
-      border-left-color: #974d26;
+      border-top-color: #012e33;
+      border-left-color: #012e33;
       border-width: 10px;
       left: 10%;
     }
@@ -119,7 +119,7 @@
   #third:checked ~ label.third,
   #four:checked ~ label.four,
   #five:checked ~ label.five {
-    border: 6px solid #974d26;
+    border: 6px solid #012e33;
   }
 
   #first:checked ~ div.one, #second:checked ~ div.two, #third:checked ~ div.three, #four:checked ~ div.four, #five:checked ~ div.five  {
