--- a/source/styles/sections/experience.scss
+++ b/source/styles/sections/experience.scss
@@ -1,7 +1,7 @@
 .experience {
   padding: 99px 0 105px 0;
   text-align: center;
-  color: #17191b;
+  color: #323e53;
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
