--- a/source/styles/sections/title.scss
+++ b/source/styles/sections/title.scss
@@ -36,7 +36,7 @@
       bottom: -16px;
       width: 47px;
       height: 5px;
-      background: #17191b;
+      background: #323e53;
     }
   }
 
