--- a/source/styles/global/icons.scss
+++ b/source/styles/global/icons.scss
@@ -4,46 +4,101 @@
 
 .icon-book {
   @include sprite($book);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-smile {
   @include sprite($smile);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-heart {
   @include sprite($heart);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-mind {
   @include sprite($mind);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-people {
   @include sprite($people);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-planet {
   @include sprite($planet);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-pointer {
   @include sprite($pointer);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-shield {
   @include sprite($shield);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-stress {
   @include sprite($stress);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-study {
   @include sprite($study);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 .icon-watch {
   @include sprite($watch);
+  transition: all ease-in-out 1s;
+
+  &:hover {
+    transform: rotateY(360deg);
+  }
 }
 
 
