--- a/source/styles/sections/get.scss
+++ b/source/styles/sections/get.scss
@@ -1,8 +1,8 @@
 .get {
   padding: 99px 0 105px 0;
   text-align: center;
-  background: lighten(#f29e92, 12%);
-  color: #17191b;
+  background: #9998a6;
+  color: #323e53;
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
