--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -10,142 +10,131 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $book-name: 'book';
-$book-x: 100px;
-$book-y: 0px;
-$book-offset-x: -100px;
-$book-offset-y: 0px;
-$book-width: 100px;
-$book-height: 100px;
-$book-total-width: 400px;
-$book-total-height: 300px;
+$book-x: 293px;
+$book-y: 184px;
+$book-offset-x: -293px;
+$book-offset-y: -184px;
+$book-width: 72px;
+$book-height: 78px;
+$book-total-width: 374px;
+$book-total-height: 281px;
 $book-image: '../images/sprite.png';
-$book: (100px, 0px, -100px, 0px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'book', );
+$book: (293px, 184px, -293px, -184px, 72px, 78px, 374px, 281px, '../images/sprite.png', 'book', );
 $heart-name: 'heart';
-$heart-x: 0px;
-$heart-y: 200px;
-$heart-offset-x: 0px;
-$heart-offset-y: -200px;
-$heart-width: 100px;
-$heart-height: 100px;
-$heart-total-width: 400px;
-$heart-total-height: 300px;
+$heart-x: 195px;
+$heart-y: 82px;
+$heart-offset-x: -195px;
+$heart-offset-y: -82px;
+$heart-width: 94px;
+$heart-height: 82px;
+$heart-total-width: 374px;
+$heart-total-height: 281px;
 $heart-image: '../images/sprite.png';
-$heart: (0px, 200px, 0px, -200px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'heart', );
+$heart: (195px, 82px, -195px, -82px, 94px, 82px, 374px, 281px, '../images/sprite.png', 'heart', );
 $mind-name: 'mind';
-$mind-x: 0px;
-$mind-y: 100px;
-$mind-offset-x: 0px;
-$mind-offset-y: -100px;
-$mind-width: 100px;
-$mind-height: 100px;
-$mind-total-width: 400px;
-$mind-total-height: 300px;
+$mind-x: 100px;
+$mind-y: 97px;
+$mind-offset-x: -100px;
+$mind-offset-y: -97px;
+$mind-width: 94px;
+$mind-height: 96px;
+$mind-total-width: 374px;
+$mind-total-height: 281px;
 $mind-image: '../images/sprite.png';
-$mind: (0px, 100px, 0px, -100px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'mind', );
+$mind: (100px, 97px, -100px, -97px, 94px, 96px, 374px, 281px, '../images/sprite.png', 'mind', );
 $people-name: 'people';
-$people-x: 100px;
-$people-y: 100px;
-$people-offset-x: -100px;
-$people-offset-y: -100px;
-$people-width: 100px;
-$people-height: 100px;
-$people-total-width: 400px;
-$people-total-height: 300px;
+$people-x: 195px;
+$people-y: 0px;
+$people-offset-x: -195px;
+$people-offset-y: 0px;
+$people-width: 98px;
+$people-height: 82px;
+$people-total-width: 374px;
+$people-total-height: 281px;
 $people-image: '../images/sprite.png';
-$people: (100px, 100px, -100px, -100px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'people', );
+$people: (195px, 0px, -195px, 0px, 98px, 82px, 374px, 281px, '../images/sprite.png', 'people', );
 $planet-name: 'planet';
-$planet-x: 200px;
-$planet-y: 0px;
-$planet-offset-x: -200px;
-$planet-offset-y: 0px;
-$planet-width: 100px;
-$planet-height: 100px;
-$planet-total-width: 400px;
-$planet-total-height: 300px;
+$planet-x: 100px;
+$planet-y: 202px;
+$planet-offset-x: -100px;
+$planet-offset-y: -202px;
+$planet-width: 96px;
+$planet-height: 78px;
+$planet-total-width: 374px;
+$planet-total-height: 281px;
 $planet-image: '../images/sprite.png';
-$planet: (200px, 0px, -200px, 0px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'planet', );
+$planet: (100px, 202px, -100px, -202px, 96px, 78px, 374px, 281px, '../images/sprite.png', 'planet', );
 $pointer-name: 'pointer';
-$pointer-x: 200px;
+$pointer-x: 0px;
 $pointer-y: 100px;
-$pointer-offset-x: -200px;
+$pointer-offset-x: 0px;
 $pointer-offset-y: -100px;
-$pointer-width: 100px;
-$pointer-height: 100px;
-$pointer-total-width: 400px;
-$pointer-total-height: 300px;
+$pointer-width: 96px;
+$pointer-height: 102px;
+$pointer-total-width: 374px;
+$pointer-total-height: 281px;
 $pointer-image: '../images/sprite.png';
-$pointer: (200px, 100px, -200px, -100px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'pointer', );
+$pointer: (0px, 100px, 0px, -100px, 96px, 102px, 374px, 281px, '../images/sprite.png', 'pointer', );
 $shield-name: 'shield';
-$shield-x: 0px;
+$shield-x: 293px;
 $shield-y: 0px;
-$shield-offset-x: 0px;
+$shield-offset-x: -293px;
 $shield-offset-y: 0px;
-$shield-width: 100px;
-$shield-height: 100px;
-$shield-total-width: 400px;
-$shield-total-height: 300px;
+$shield-width: 81px;
+$shield-height: 94px;
+$shield-total-width: 374px;
+$shield-total-height: 281px;
 $shield-image: '../images/sprite.png';
-$shield: (0px, 0px, 0px, 0px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'shield', );
+$shield: (293px, 0px, -293px, 0px, 81px, 94px, 374px, 281px, '../images/sprite.png', 'shield', );
 $smile-name: 'smile';
-$smile-x: 100px;
-$smile-y: 200px;
-$smile-offset-x: -100px;
-$smile-offset-y: -200px;
+$smile-x: 0px;
+$smile-y: 0px;
+$smile-offset-x: 0px;
+$smile-offset-y: 0px;
 $smile-width: 100px;
 $smile-height: 100px;
-$smile-total-width: 400px;
-$smile-total-height: 300px;
+$smile-total-width: 374px;
+$smile-total-height: 281px;
 $smile-image: '../images/sprite.png';
-$smile: (100px, 200px, -100px, -200px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'smile', );
+$smile: (0px, 0px, 0px, 0px, 100px, 100px, 374px, 281px, '../images/sprite.png', 'smile', );
 $stress-name: 'stress';
-$stress-x: 200px;
-$stress-y: 200px;
-$stress-offset-x: -200px;
-$stress-offset-y: -200px;
-$stress-width: 100px;
-$stress-height: 100px;
-$stress-total-width: 400px;
-$stress-total-height: 300px;
+$stress-x: 100px;
+$stress-y: 0px;
+$stress-offset-x: -100px;
+$stress-offset-y: 0px;
+$stress-width: 95px;
+$stress-height: 97px;
+$stress-total-width: 374px;
+$stress-total-height: 281px;
 $stress-image: '../images/sprite.png';
-$stress: (200px, 200px, -200px, -200px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'stress', );
+$stress: (100px, 0px, -100px, 0px, 95px, 97px, 374px, 281px, '../images/sprite.png', 'stress', );
 $study-name: 'study';
-$study-x: 300px;
-$study-y: 0px;
-$study-offset-x: -300px;
-$study-offset-y: 0px;
+$study-x: 0px;
+$study-y: 202px;
+$study-offset-x: 0px;
+$study-offset-y: -202px;
 $study-width: 100px;
-$study-height: 100px;
-$study-total-width: 400px;
-$study-total-height: 300px;
+$study-height: 79px;
+$study-total-width: 374px;
+$study-total-height: 281px;
 $study-image: '../images/sprite.png';
-$study: (300px, 0px, -300px, 0px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'study', );
+$study: (0px, 202px, 0px, -202px, 100px, 79px, 374px, 281px, '../images/sprite.png', 'study', );
 $watch-name: 'watch';
-$watch-x: 300px;
-$watch-y: 100px;
-$watch-offset-x: -300px;
-$watch-offset-y: -100px;
-$watch-width: 100px;
-$watch-height: 100px;
-$watch-total-width: 400px;
-$watch-total-height: 300px;
+$watch-x: 293px;
+$watch-y: 94px;
+$watch-offset-x: -293px;
+$watch-offset-y: -94px;
+$watch-width: 76px;
+$watch-height: 90px;
+$watch-total-width: 374px;
+$watch-total-height: 281px;
 $watch-image: '../images/sprite.png';
-$watch: (300px, 100px, -300px, -100px, 100px, 100px, 400px, 300px, '../images/sprite.png', 'watch', );
-$work-item-name: 'work-item';
-$work-item-x: 300px;
-$work-item-y: 200px;
-$work-item-offset-x: -300px;
-$work-item-offset-y: -200px;
-$work-item-width: 36px;
-$work-item-height: 37px;
-$work-item-total-width: 400px;
-$work-item-total-height: 300px;
-$work-item-image: '../images/sprite.png';
-$work-item: (300px, 200px, -300px, -200px, 36px, 37px, 400px, 300px, '../images/sprite.png', 'work-item', );
-$spritesheet-width: 400px;
-$spritesheet-height: 300px;
+$watch: (293px, 94px, -293px, -94px, 76px, 90px, 374px, 281px, '../images/sprite.png', 'watch', );
+$spritesheet-width: 374px;
+$spritesheet-height: 281px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($book, $heart, $mind, $people, $planet, $pointer, $shield, $smile, $stress, $study, $watch, $work-item, );
-$spritesheet: (400px, 300px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($book, $heart, $mind, $people, $planet, $pointer, $shield, $smile, $stress, $study, $watch, );
+$spritesheet: (374px, 281px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
