--- a/source/styles/sections/guarantees.scss
+++ b/source/styles/sections/guarantees.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 99px 0 105px 0;
   text-align: left;
-  color: #17191b;
+  color: #323e53;
 
   @media (max-width: 980px) {
     padding: 30px 0;
