--- a/source/styles/sections/how.scss
+++ b/source/styles/sections/how.scss
@@ -1,8 +1,8 @@
 .how {
   position: relative;
   padding: 86px 0 94px;
-  background: #94c8d6;
-  color: #012e33;
+  background: #bddfef;
+  color: #323e53;
   text-align: center;
 
 
