--- a/source/templates/sections/how.pug
+++ b/source/templates/sections/how.pug
@@ -1,6 +1,6 @@
 section#how.how
     .container
-        .title.title--with-bottom-line-how
+        .title.title--with-bottom-line
             h2.title__header Формат курса
 
         ul.how__description
