--- a/source/styles/sections/coach.scss
+++ b/source/styles/sections/coach.scss
@@ -1,8 +1,8 @@
 .coach {
   padding: 99px 0 105px 0;
   text-align: center;
-  background: #012e33;
-  color: #94c8d6;
+  background: #3f3446;
+  color: #c6bfd2;
 
   @media (max-width: 980px) {
     padding: 30px 0;
