--- a/source/styles/sections/info.scss
+++ b/source/styles/sections/info.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 99px 0 105px 0;
   text-align: center;
-  color: #17191b;
+  color: #323e53;
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
@@ -24,11 +24,10 @@
   &__item {
     width: 45%;
     padding: 26px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 30px #726c91;
     border-radius: 10px;
     cursor: pointer;
     background: #fff;
-    color: #17191b;
 
     @media (max-width: 980px) {
       width: 80%;
@@ -42,7 +41,7 @@
     }
 
     &_time {
-      background: #35838d;
+      background: #3f3446;
       color: #fff;
     }
   }
