--- a/source/styles/sections/testim.scss
+++ b/source/styles/sections/testim.scss
@@ -1,8 +1,8 @@
 .testimonials {
   padding: 99px 0 50px;
   text-align: center;
-  color: #f2efdf;
-  background: #17191b;
+  color: #bddfef;
+  background: #323e53;
 
   .name__testim {
     display: flex;
@@ -53,7 +53,7 @@
     display: inline-block;
     width: 10%;
     margin-bottom: 15px;
-    border: 4px solid white;
+    border: 4px solid #bddfef;
     cursor: pointer;
     transition: border-color 0.3s linear;
   }
@@ -61,8 +61,8 @@
   blockquote {
     margin: 0;
     padding: 30px;
-    background-color: #012e33;
-    color: #fdeacf;
+    background-color: #3f3446;
+    color: #c6bfd2;
     box-shadow: 0 5px 2px rgba(0, 0, 0, 0.1);
     position: relative;
     transition: background-color 0.6s linear;
@@ -74,8 +74,8 @@
       position: absolute;
       top: 100%;
       border: solid transparent;
-      border-top-color: #012e33;
-      border-left-color: #012e33;
+      border-top-color: #3f3446;
+      border-left-color: #3f3446;
       border-width: 10px;
       left: 10%;
     }
@@ -119,7 +119,7 @@
   #third:checked ~ label.third,
   #four:checked ~ label.four,
   #five:checked ~ label.five {
-    border: 6px solid #012e33;
+    border: 6px solid #3f3446;
   }
 
   #first:checked ~ div.one, #second:checked ~ div.two, #third:checked ~ div.three, #four:checked ~ div.four, #five:checked ~ div.five  {
