--- a/source/templates/sections/header.pug
+++ b/source/templates/sections/header.pug
@@ -2,7 +2,7 @@ header.header
     .container
         .header__top
 
-            a.logo: img.logo__picture(src="images/logo.png" alt="logo")
+            a.logo: img.logo__picture(src="images/logo_2.png" alt="logo")
             include contacts
             //include nav
         include hero
