add liqpay and scroll from header to price

--- a/source/templates/sections/price.pug
+++ b/source/templates/sections/price.pug
@@ -21,7 +21,10 @@ section#price.price
                     hr
                     | 700 грн с 20.06
 
-                a.button.button--blue.button--text-uppercase(href="#") Записаться
+                a.button.button--header.button--text-uppercase(href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJzaW" +
+                "9uIjozLCJhY3Rpb24iOiJwYXkiLCJwdWJsaWNfa2V5IjoiaTMwNzY1NTk4MTY1IiwiYW1vdW50IjoiNzAwIiwiY3VycmVuY3kiOiJVQU" +
+                "giLCJkZXNjcmlwdGlvbiI6ItCf0YDQvtGB0YLQvtC5INC60YPRgNGBIiwidHlwZSI6ImJ1eSIsImxhbmd1YWdlIjoicnUifQ%3D%3D&s" +
+                "ignature=fNCcLaBHyu3B4keSD2CW0QHF8iA%3D" target="_blank") Записаться
 
             li.price__item
                 h2.recommend recommend
@@ -41,7 +44,10 @@ section#price.price
                     hr
                     | 1800 грн с 20.06
 
-                a.button.button--blue.button--text-uppercase.button--best(href="#") Записаться
+                a.button.button--header.button--text-uppercase.button--best(href="https://www.liqpay.ua/api/3/checkout?" +
+                "data=eyJ2ZXJzaW9uIjozLCJhY3Rpb24iOiJwYXkiLCJwdWJsaWNfa2V5IjoiaTI5Mzg2MjIwNTExIiwiYW1vdW50IjoiMTgwMCIs" +
+                "ImN1cnJlbmN5IjoiVUFIIiwiZGVzY3JpcHRpb24iOiLQoNC10LrQvtC80LXQvdC00YPQtdC80YvQuSDQutGD0YDRgSIsInR5cGUiO" +
+                "iJidXkiLCJsYW5ndWFnZSI6InJ1In0%3D&signature=EmTLDCXqz0lCsHnBdJDvfeUBdR8%3D" target="_blank") Записаться
 
             li.price__item
                 h3.price__header Пакет
@@ -60,4 +66,7 @@ section#price.price
                     hr
                     | 3200 грн с 20.06
 
-                a.button.button--blue.button--text-uppercase(href="#") Записаться
+                a.button.button--header.button--text-uppercase(href="https://www.liqpay.ua/api/3/checkout?data=eyJ2ZXJza" +
+                "W9uIjozLCJhY3Rpb24iOiJwYXkiLCJwdWJsaWNfa2V5IjoiaTcyNDcxNTM2NTY0IiwiYW1vdW50IjoiMzIwMCIsImN1cnJlbmN5Ijoi" +
+                "VUFIIiwiZGVzY3JpcHRpb24iOiLQn9Cw0LrQtdGCIFBSRU1JVU0iLCJ0eXBlIjoiYnV5IiwibGFuZ3VhZ2UiOiJydSJ9&signature=" +
+                "kpNU5JcDpUkcVAbOk83U52gU90A%3D" target="_blank") Записаться
