--- a/source/templates/sections/hero.pug
+++ b/source/templates/sections/hero.pug
@@ -9,4 +9,4 @@ section.hero
         | 8 простых техник медитации
         br
         | 8 прямых эфиров с Аленой Вишневской
-    a.button.button--header.button--text-uppercase(href="#contact") Записаться
+    a#price_a.button.button--header.button--text-uppercase(href="#price") Записаться
