--- a/source/templates/sections/faq.pug
+++ b/source/templates/sections/faq.pug
@@ -80,7 +80,7 @@ section.faq__section#faq
 
 
         .form-container.is-hidden
-            form(method="post" action="sendemail.php" data-them="Тема").form
+            form(method="post" action="send.php").form
                 button(type="button").form__close-button x
                 .form__text.
                     Задайте их нашему координатору
