--- a/source/styles/sections/testim.scss
+++ b/source/styles/sections/testim.scss
@@ -67,6 +67,9 @@
     position: relative;
     transition: background-color 0.6s linear;
     text-align: left;
+    border-radius: 10px;
+    margin-bottom: 15px;
+
     &:after {
       content: "";
       height: 0;
@@ -105,6 +108,7 @@
   img {
     float: left;
     margin-right: 20px;
+    border-radius: 10px;
   }
 
   .slide {
