change style faq, programm

--- a/source/styles/sections/faq.scss
+++ b/source/styles/sections/faq.scss
@@ -1,7 +1,7 @@
 .faq__section {
   padding: 100px 0 110px 0;
   color: #d3dbf6;
-  background-color: #1b3865;
+  background-color: #506684;
 
   @media (min-width: 320px) and (max-width: 810px) {
     padding: 50px 0 55px 0;
@@ -133,9 +133,8 @@
 }
 
 .nav-wrapper {
-  max-width: 550px;
+  max-width: 600px;
   margin: auto auto 50px;
-  background: #fff;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -167,7 +166,7 @@
   > a {
     display: block;
     text-decoration: none;
-    color: #323e53;
+    color: #d3dbf6;
     text-transform: uppercase;
 
     @media (max-width: 600px) {
@@ -195,7 +194,7 @@
     font-family: $fontawesome;
     font-style: normal;
     font-size: .9rem;
-    color: #1b3865;
+    color: #d3dbf6;
   }
   &.minus:after {
     content: "\f068";
