--- a/source/templates/sections/program.pug
+++ b/source/templates/sections/program.pug
@@ -87,4 +87,5 @@ section#program.program
 
 
 
-        a.button.button--blue.button--text-uppercase(href="#contact") Записаться
+
+        hr.program_hr
