change form send

--- a/source/templates/sections/faq.pug
+++ b/source/templates/sections/faq.pug
@@ -88,6 +88,6 @@ section.faq__section#faq
                 .form__fields
                     input.form__input(type='text' placeholder="Your Name" autocomplete='text' name='name' required='required')
                     input.form__input(type="email" placeholder="Your email" autocomplete='email' name='email' required='required')
-                    textarea.form__input(rows="10" cols="45" name="message" placeholder="Your message")
-                    input.button.button--form.button--text-uppercase(type='submit' value="Отправить")
+                    textarea.form__input(rows="10" cols="45" name="message" placeholder="Your message" required='required')
+                    input#btn_form.button.button--form.button--text-uppercase(type='submit' value="Отправить")
 
