change program section and send_form.js

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -17,7 +17,8 @@
 @import "sections/get";
 @import "sections/price";
 @import "sections/how";
-@import "sections/program";
+//@import "sections/program";
+@import "sections/prog";
 @import "sections/info";
 @import "sections/coach";
 @import "sections/guarantees";
