--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -13,7 +13,8 @@ html(lang="ru")
             include sections/get
             include sections/price
             include sections/how
-            include sections/program
+            //include sections/program
+            include sections/prog
             include sections/info
             include sections/coach
             include sections/guarantees
